read log as UTF-8